# codeGSimulator

./: .gitignore  CHANGELOG  CMakeConfig.hpp.in  CMakeLists.txt  README.md
.github/workflows/: cmake_windows_MSVC_32bit.yml  cmake_windows_MSVC_64bit.yml
example/: uart_test  uart_test.cg  uart_test.rcg
include/: C_bus.hpp  C_codeg.hpp  C_console.hpp  C_error.hpp  C_instruction.hpp  C_readableBus.hpp  C_signal.hpp  C_string.hpp  C_target.hpp  main.hpp
include/memoryModule/: C_MM1.hpp  C_memoryModule.hpp  memoryModules.hpp
include/motherboard/: C_GCM_5_1.hpp  C_motherboard.hpp  motherboards.hpp
include/peripheral/: C_peripheral.hpp  C_uart.hpp
include/processor/: C_ALUminium_1_1.hpp  C_GP8B_5_1.hpp  C_alu.hpp  C_processor.hpp
src/: C_console.cpp  C_signal.cpp  C_string.cpp  main.cpp
src/memoryModule/: C_MM1.cpp  memoryModules.cpp
src/motherboard/: C_GCM_5_1.cpp  motherboards.cpp
src/peripheral/: C_uart.cpp
src/processor/: C_ALUminium_1_1.cpp  C_GP8B_5_1.cpp
